Source/WebCore/Modules/webaudio/AudioContext.cpp
@@ -37,6 +37,7 @@
 #include "AudioListener.h"
 #include "AudioNodeInput.h"
 #include "AudioNodeOutput.h"
+#include "AudioSession.h"
 #include "BiquadFilterNode.h"
 #include "ChannelMergerNode.h"
 #include "ChannelSplitterNode.h"
@@ -488,13 +489,58 @@ ExceptionOr<Ref<ScriptProcessorNode>> AudioContext::createScriptProcessor(size_t
 {
     ASSERT(isMainThread());
     lazyInitialize();
+
+    // W3C Editor's Draft 06 June 2017
+    //  https://webaudio.github.io/web-audio-api/#widl-BaseAudioContext-createScriptProcessor-ScriptProcessorNode-unsigned-long-bufferSize-unsigned-long-numberOfInputChannels-unsigned-long-numberOfOutputChannels
+
+    // The bufferSize parameter determines the buffer size in units of sample-frames. If it's not passed in,
+    // or if the value is 0, then the implementation will choose the best buffer size for the given environment,
+    // which will be constant power of 2 throughout the lifetime of the node. ... If the value of this parameter
+    // is not one of the allowed power-of-2 values listed above, an IndexSizeError must be thrown.
+    switch (bufferSize) {
+    case 0:
+#if USE(AUDIO_SESSION)
+        // Pick a value between 256 (2^8) and 16384 (2^14), based on the buffer size of the current AudioSession:
+        bufferSize = 1 << std::max<size_t>(8, std::min<size_t>(14, std::log2(AudioSession::sharedSession().bufferSize())));
+#else
+        bufferSize = 2048;
+#endif
+        break;
+    case 256:
+    case 512:
+    case 1024:
+    case 2048:
+    case 4096:
+    case 8192:
+    case 16384:
+        break;
+    default:
+        return Exception { INDEX_SIZE_ERR };
+    }
+
+    // An IndexSizeError exception must be thrown if bufferSize or numberOfInputChannels or numberOfOutputChannels
+    // are outside the valid range. It is invalid for both numberOfInputChannels and numberOfOutputChannels to be zero.
+    // In this case an IndexSizeError must be thrown.
+
+    if (!numberOfInputChannels && !numberOfOutputChannels)
+        return Exception { NOT_SUPPORTED_ERR };
+
+    // This parameter [numberOfInputChannels] determines the number of channels for this node's input. Values of
+    // up to 32 must be supported. A NotSupportedError must be thrown if the number of channels is not supported.
+
+    if (numberOfInputChannels > maxNumberOfChannels())
+        return Exception { NOT_SUPPORTED_ERR };
+
+    // This parameter [numberOfOutputChannels] determines the number of channels for this node's output. Values of
+    // up to 32 must be supported. A NotSupportedError must be thrown if the number of channels is not supported.
+
+    if (numberOfOutputChannels > maxNumberOfChannels())
+        return Exception { NOT_SUPPORTED_ERR };
+
     auto node = ScriptProcessorNode::create(*this, m_destinationNode->sampleRate(), bufferSize, numberOfInputChannels, numberOfOutputChannels);
 
-    if (!node)
-        return Exception { INDEX_SIZE_ERR };
-
-    refNode(*node); // context keeps reference until we stop making javascript rendering callbacks
-    return node.releaseNonNull();
+    refNode(node); // context keeps reference until we stop making javascript rendering callbacks
+    return WTFMove(node);
 }
 
 Ref<BiquadFilterNode> AudioContext::createBiquadFilter()
